Try to workaround iOS 11 textarea posision: fixed problem. https://stackoverflow.com/q/46339063/338986

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,3 +1,8 @@
+body.ios-modal-fix {
+    position: fixed;
+    width: 100%;
+}
+
 .card:hover {
     background-color: whitesmoke;
     color: #363636;
